<resources>
    <string name="app_name">anime</string>
    <string name="title">One Piece</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="rating">4.7</string>
    <string name="type">Family</string>
    <string name="percentage">97%</string>
    <string name="similar">Similar</string>
    <string name="lorem">sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r  hasjg dfyuawg fyhuqwgfhuiaw bhqawu</string>
    <string name="lorem2">sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu</string>
    <string name="lorem3">sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu sdhgs hjd gsdgjhasgd jasehjashgdhja kdjaskg dhjasgdh jkasgshdj asghdj gashjd ashjdgh jasdhjas hjdgy89qwg7r hasjg dfyuawg fyhuqwgfhuiaw bhqawu</string>
    <string name="thumbnail_image">Thumbnail image</string>
    <string name="bookmark">bookmark</string>
    <string name="bannerimage">bannerimage</string>
    <string name="penjelasanonpiece">One Piece adalah sebuah film petualangan fantasi yang diadaptasi dari manga dan anime terkenal karya Eiichiro Oda. Film ini berfokus pada tokoh utama bernama Monkey D. Luffy, seorang pemuda yang bercita-cita menjadi Raja Bajak Laut. Setelah memakan Buah Iblis bernama Gomu Gomu no Mi, tubuh Luffy menjadi elastis seperti karet, memberinya kekuatan unik yang membantunya menghadapi berbagai musuh di lautan. Luffy memulai perjalanannya dengan membentuk kru bajak laut bernama Topi Jerami, dan bersama mereka, ia berlayar mengarungi Grand Line untuk mencari harta karun legendaris bernama “One Piece.”\n\nFilm One Piece menghadirkan banyak karakter menarik dengan latar belakang dan kemampuan yang unik. Setiap anggota kru Topi Jerami memiliki alasan tersendiri untuk ikut berlayar, mulai dari impian menjadi pendekar pedang terkuat, menemukan peta dunia, hingga menciptakan obat mujarab. Dinamika antar karakter sangat kuat dan menjadi salah satu daya tarik utama film ini. Hubungan persahabatan dan solidaritas antar kru ditampilkan dengan penuh emosi dan seringkali menyentuh hati penonton.\n\nSecara visual, film ini menyuguhkan animasi yang luar biasa dengan desain dunia yang kaya dan penuh warna. Adegan pertarungan ditampilkan secara spektakuler, dengan koreografi yang dinamis dan efek visual yang memanjakan mata. Musik dan pengisi suara pun ikut memperkuat nuansa petualangan serta emosi dalam setiap adegan, menjadikan pengalaman menonton semakin imersif. Setiap lokasi yang dikunjungi kru Topi Jerami memiliki ciri khas tersendiri, dari pulau-pulau tropis hingga kota-kota misterius, yang memperkaya latar cerita.\n\nTema yang diangkat dalam film ini cukup dalam, meskipun dibalut dengan nuansa petualangan dan aksi. Persahabatan, mimpi, keberanian, dan perjuangan menghadapi ketidakadilan menjadi pesan moral utama. Luffy dan krunya tidak hanya bertarung melawan musuh fisik, tetapi juga melawan sistem yang menindas dan ketidakbenaran yang ada di dunia mereka. Hal ini membuat One Piece bukan hanya sekadar film hiburan, tapi juga cerita penuh makna yang bisa menginspirasi penontonnya.\n\nBagi penggemar setia One Piece, film ini merupakan hadiah istimewa yang menghadirkan kembali nuansa nostalgia dari kisah orisinalnya. Sedangkan bagi penonton baru, film ini bisa menjadi pintu masuk yang menarik ke dunia One Piece yang luas dan penuh kejutan. Dengan cerita yang solid, karakter yang kuat, serta visual yang memukau, One Piece berhasil memberikan pengalaman menonton yang memikat dan meninggalkan kesan mendalam.</string>
</resources>